--- a/src/app/pages/rule-book/components/transfers/clause/clause.component.html
+++ b/src/app/pages/rule-book/components/transfers/clause/clause.component.html
@@ -13,65 +13,168 @@
   <ion-card>
     <h3>Clausole</h3>
     <p>
-      Le clausole che possono essere aggiunte alle trattative si dividono in 3
+      Le clausole che possono essere aggiunte alle trattative si dividono in 4
       categorie principali:
     </p>
     <ol>
-      <li>rescissorie</li>
-      <li>di modifica</li>
-      <li>di aggiunta</li>
-    </ol>
-    <ol>
-      <li>
-        Le clausole rescissorie possono essere applicate alle trattative di
-        prestito per annullarlo durante la stagione al seguito di un evento.
-        Possono essere di due tipi: quelle che vengono attivate da eventi extra
-        Lega e quelle che invece vengono attivate da scelte o situazioni intra
-        Lega. La differenza tra le due è che le prime possono annullare la
-        trattativa durante ogni finestra di mercato del martedì mentre le
-        seconde solo durante le apposite finestre di mercato tra fantallenatori.
-      </li>
-      <li>
-        Le clausole di modifica possono modificare una trattativa a seguito di
-        un evento sia intra che extra Lega. Possono essere cambiate le cifre dei
-        bonus, la tipologia dei bonus, altre clausole… ma non possono essere
-        modificate le caratteristiche intrinseche della trattativa; un prestito
-        non può diventare una cessione a titolo definitivo e viceversa.
-      </li>
-      <li>
-        Le clausole di aggiunta, se attivate, ampliano i diritti o gli obblighi
-        in una trattativa. Possono aggiungere diritti di riscatto, diritti di
-        recompra, diritti di prelazione e l'obbligo di riscatto. Al contrario
-        delle clausole rescissorie, le clausole di aggiunta non permettono di
-        far valere tale diritto al di fuori delle apposite finestre di mercato.
-        Se non viene specificata la data per avvalersi di tale diritto/obbligo
-        (nel caso scattasse), questo varrà solo per la successiva finestra di
-        mercato.
-      </li>
+      <li>AGGIUNTA</li>
+      <li>ANNULLAMENTO</li>
+      <li>MODIFICA</li>
+      <li>LIMITAZIONE</li>
     </ol>
     <p>
-      I soldi che vengono scambiati a causa di una clausola vengono considerati
-      alla stregua dei conguagli economici modificando quindi i valori finali
-      dei giocatori.
+      Le prime tre tipologie essere attivate al seguito di un particolare
+      evento. Solamente le clausole di limitazione non vengono attivate e hanno
+      una durata definita dalle parti in gioco.
+    </p>
+    <p>Le clausole vengono attivate da due tipologie di eventi:</p>
+    <ul>
+      <li>Eventi volontari.</li>
+      <li>Eventi casuali.</li>
+    </ul>
+    <b>Eventi volontari:</b>
+    <ul>
+      <li>Volontà di una delle due parti di attivare la clausola</li>
+    </ul>
+    <b>Eventi causali:</b>
+    <ul>
+      <li>Compra-vendita mercato REALE.</li>
+      <li>
+        Raggiungimento di un certo numero di GOL/ASSIST/PRESENZE/VOTI superiori
+        a…/FANTAVOTI superiori a… (si attiva nel momento del raggiungimento di
+        tale numero).
+      </li>
+      <li>
+        Raggiungimento di un certo numero di GOL/ASSIST/PRESENZE/VOTI superiori
+        a…/FANTAVOTI superiori a… valutato a fine stagione (si attiva a fine
+        stagione se è stato raggiunto tale numero).
+      </li>
+      <li>Infortuni superiori a…</li>
+      <li>Vittoria della coppa o del campionato della fantalega.</li>
+      <li>
+        Una qualunque combinazione degli eventi descritti in precedenza
+        correlati con la congiunzione “e” oppure “o”.
+      </li>
+    </ul>
+    <p>
+      Gli eventi VOLONTARI possono essere attivati solo durante una delle
+      finestre di mercato tra fantallenatori.
     </p>
     <p>
-      <b>Eventi extra Lega:</b> infortuni, compra vendita nel mercato reale,
-      raggiungimento di una cifra di gol/assist/presenze, etc.
+      Gli eventi CASUALI al contrario possono essere attivati durante una
+      qualunque delle finestre di mercato del MARTEDI’.
     </p>
     <p>
-      <b>Eventi intra Lega:</b> scelta di un fantallenatore, posizione in
-      classifica in campionato, posizione in coppa etc.
+      Dopo aver visto come si attivano le clausole guardiamo adesso cosa possono
+      modificare di una trattativa.
+    </p>
+    <p>Ritorniamo alla classificazione vista in precedenza:</p>
+    <b>Clausole di AGGIUNTA</b>
+    <p>In seguito alla loro attivazione tali clausole posso aggiungere:</p>
+    <ul>
+      <li>
+        DIRITTI/OBBLIGHI di riscatto che quindi risultano essere condizionati da
+        ciò che attiva la clausola
+      </li>
+      <li>BONUS</li>
+      <li>Altre CLAUSOLE di qualunque tipologia</li>
+      <li>CONGUAGLI</li>
+    </ul>
+    <p>
+      Ogni volta che una clausola aggiunge una nuova componente alla trattativa,
+      quest’ultima viene “rigenerata” con i valori ATTUALI se l’attivazione è
+      volontaria o con i valori INIZIALI se l’attivazione è CASUALE.
+    </p>
+    <b>Clausole di ANNULLAMENTO</b>
+    <p>In seguito alla loro attivazione tali clausole possono annullare:</p>
+    <ul>
+      <li>PRESTITI</li>
+      <li>
+        TITOLI DEFINITIVI solo fino alla fine della sessione di mercato tra
+        fantallenatori e se non sono state giocate giornate di serie A tra
+        l’ufficializzazione e l’annullamento
+      </li>
+      <li>BONUS</li>
+      <li>CLAUSOLE</li>
+      <li>CONGUAGLI</li>
+    </ul>
+    <b>Clausole di MODIFICA</b>
+    <p>
+      Le clausole di modifica equivalgono in tutto e per tutto ad una
+      combinazione tra una clausola di annullamento ed una di aggiunta. Per
+      semplificare la scrittura della trattativa può però risultare utile
+      fornire la possibilità di modificare una parte della trattativa in seguito
+      all’attivazione di una clausola in un unico passaggio.
+    </p>
+    <b>Clausole di LIMITAZIONE</b>
+    <p>
+      Le clausole di limitazione sono le uniche a non aver bisogno di essere
+      attivate ma hanno una durata nel tempo scelta dalle parti. Tali clausole
+      limitano i diritti del nuovo proprietario.
+    </p>
+    <ul>
+      <li>
+        Limiti di vendita (il nuovo proprietario non potrà vendere il giocatore
+        o i giocatori ad una o più squadre della lega per X anni).
+      </li>
+      <li>
+        Percentuale sulla futura vendita; tale percentuale si calcola sul valore
+        che il giocatore o i giocatori avranno DOPO lo scambio in questione.
+      </li>
+    </ul>
+    <b>Penali:</b>
+    <p>
+      Vengono definite penali tutti gli scambi di denaro generati
+      dall’attivazione di una clausola. Si possono definire due tipologie:
+    </p>
+    <ul>
+      <li>Penali che annullano la trattativa</li>
+      <li>Penali che non annullano la trattativa</li>
+    </ul>
+    <p>
+      La prima tipologia non modifica i valori dei giocatori se e solo se viene
+      annullata la trattativa nella sua interezza. Ogni scambio di denaro
+      aggiunto alla trattativa che non annullino quest’ultima viene sommato al
+      conguaglio modificando di conseguenza i valori dei giocatori.
+    </p>
+    <b>ANNULLAMENTO PRESTITI VOLONTARIO:</b>
+    <p>
+      Come abbiamo visto in precedenza i prestiti sono una componente della
+      trattativa che può essere annullata in seguito all’attivazione di una
+      clausola. Tale attivazione può essere VOLONTARIA oppure CASUALE. Cosa
+      succede quando l’annullamento è VOLONTARIO?
     </p>
     <p>
-      Se in una trattativa di prestito con diritto di riscatto non viene
-      specificato il periodo o la data entro la quale ci si possa avvalere di
-      tale diritto, questo scadrà dopo una settimana dall’inizio del mercato
-      estivo.
+      Un annullamento volontario, che può avvenire solo durante le finestre di
+      mercato tra fantallentatori, causa una rigenerazione della trattativa
+      nella quale viene modificata la durata del prestito originale e viene
+      aggiunto un prestito nella direzione inversa dello stesso giocatore con la
+      durata che avrebbe dovuto avere previo annullamento. Così facendo lo
+      stesso giocatore risulta essere presente da entrambe le parti. Eventuali
+      penali dovute all’annullamento vengono aggiunte al conguaglio.
     </p>
+    <p>
+      In questo caso abbiamo l’aggiunta di un giocatore alla trattativa, cosa
+      che non succede nel caso dei riscatti. Il giocatore aggiunto quale valore
+      avrà? Abbiamo tre possibilità:
+    </p>
+    <ul>
+      <li>Valore e quotazione iniziale</li>
+      <li>Valore iniziale rivalutato nella quotazione attuale</li>
+      <li>Valore post trattativa con la quotazione attuale</li>
+    </ul>
+    <p>
+      La scelta è ricaduta sulla prima opzione; valore e quotazione iniziale.
+      Risulta essere la scelta più conservativa e, anche se l’annullamento del
+      prestito è volontario, la cifra della penale viene scelta alla creazione
+      della trattativa e non c’è motivo di inserire il valore rivalutato del
+      giocatore.
+    </p>
+    <b>ANNULLAMENTO TRATTATIVE</b>
     <p>
       È possibile annullare una trattativa o una parte di essa durante le
       finestre di mercato se i due fantallenatori coinvolti trovano un accordo e
-      se non sono state giocate giornate di Serie A tra l’ufficializzazione
+      se non sono state giocate giornate di serie A tra l’ufficializzazione
       della trattativa e l’annullamento.
     </p>
     <p>
@@ -83,15 +186,22 @@
       È possibile, inoltre, annullare una trattativa o una parte di essa durante
       una finestra di mercato se i due fantallenatori coinvolti trovano un
       accordo e se le due squadre non hanno ancora ufficializzato una trattativa
-      nella suddetta finestra di mercato. <br />Tale annullamento viene
-      considerato come una trattativa.
+      nella suddetta finestra di mercato. Tale annullamento viene considerato
+      come una trattativa.
     </p>
     <p>
-      <b>Attenzione:</b> per la seconda casistica possono essere annullate solo
+      <b>Attenzione:</b>per la seconda casistica possono essere annullate solo
       le trattative o le parti di esse che sono continuative nel futuro
       prossimo; possono essere annullati bonus, clausole che ancora non si sono
       attivate, prestiti, etc… ma non si possono annullare trattative a titolo
       definitivo o clausole che si sono già attivate.
+    </p>
+    <p>
+      <b>Controriscatti:</b> Il diritto di contro-riscattare un giocatore si può
+      aggiungere ad una trattativa di prestito con diritto/obbligo di riscatto.
+      Si può far valere tale diritto al più una settimana dopo la data del
+      riscatto del giocatore in questione. La cifra del contro-riscatto deve
+      essere superiore o uguale a quella del riscatto.
     </p>
   </ion-card>
 </ion-content>
