--- a/src/app/pages/free/free.page.html
+++ b/src/app/pages/free/free.page.html
@@ -45,7 +45,7 @@
       </ion-row>
     </ion-grid>
   </ion-card>
-  <table mat-table [dataSource]="players" class="mat-elevation-z8">
+  <table mat-table [dataSource]="players" class="mat-elevation-z8 table-image-first-col">
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
