--- a/src/app/pages/team/team.page.html
+++ b/src/app/pages/team/team.page.html
@@ -14,7 +14,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <table mat-table [dataSource]="players" class="mat-elevation-z8">
+  <table
+    mat-table
+    [dataSource]="players"
+    class="mat-elevation-z8 table-image-first-col"
+  >
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
@@ -22,11 +26,18 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div
+          *ngIf="element.img"
           style="width: fit-content"
           [ngStyle]="{'background-color': computeRoleColor(element.role)}"
         >
-          <img src="{{element.img}}" alt="" />
+          <img src="{{element?.img}}" alt="" />
         </div>
+        <b
+          *ngIf="!element.img"
+          [ngStyle]="{'background-color': computeRoleColor(element.role)}"
+          class="role"
+          >{{element.role}}</b
+        >
       </td>
     </ng-container>
 
@@ -36,7 +47,7 @@
         <b
           [ngStyle]="{'background-color': computeRoleColor(element.role)}"
           class="role"
-          >{{element.role}}</b
+          >{{element?.role}}</b
         >
       </td>
     </ng-container>
@@ -44,34 +55,36 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Nome</th>
       <td mat-cell *matCellDef="let element">
-        <span>{{element.name | formatName}}</span>
+        <span>{{element?.name | formatName}}</span>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="team">
       <th mat-header-cell *matHeaderCellDef>Squadra</th>
       <td style="text-decoration: underline" mat-cell *matCellDef="let element">
-        {{element.team | shortTeam}}
+        {{element?.team | shortTeam}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="quot">
       <th class="align-right" mat-header-cell *matHeaderCellDef>Quot</th>
       <td class="align-right" mat-cell *matCellDef="let element">
-        {{element.quot}}
+        {{element?.quot}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="value">
       <th class="align-right" mat-header-cell *matHeaderCellDef>Valore</th>
       <td class="align-right" mat-cell *matCellDef="let element">
-        {{element.value | currency:'EUR'}}
+        {{element?.value | currency:'EUR'}}
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr
-      [ngStyle]="{'background-color': row.paymentValue ? 'rgba(85, 107, 47, 0.5)' : (row.youthFlag ? 'rgb(100, 100, 100)' : 'inherit')}"
+      [ngStyle]="{'background-color': row.paymentValue ? 'rgba(85, 107, 47, 0.5)' : (row.youthFlag ? 'rgb(100, 100, 100)' : 'inherit'), 
+      'border-color': !row.playerId ? computeRoleColor(row.role): 'inherit', 
+      'border-width': !row.playerId ? '3px': 'inherit', 'border-style': !row.playerId ? 'solid': 'inherit'}"
       (click)="navigateToPlayer(row.playerId)"
       mat-row
       *matRowDef="let row; columns: displayedColumns;"
