--- a/src/app/pages/team/team.page.scss
+++ b/src/app/pages/team/team.page.scss
@@ -10,6 +10,7 @@ table {
     color: #fff;
     border-radius: 50%;
     padding: 5px 9px;
+    margin-left: 6px;
   }
   .align-right {
     text-align: right;
