--- a/src/global.scss
+++ b/src/global.scss
@@ -37,6 +37,11 @@ td.mat-cell:first-of-type {
   padding-left: 12px !important;
 }
 
+.table-image-first-col td.mat-cell:first-of-type {
+  padding-left: 0 !important;
+}
+
+
 th.mat-header-cell:last-of-type,
 td.mat-cell:last-of-type {
   padding-right: 12px !important;
