--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -15,6 +15,14 @@
       >
     </mat-list-item>
     <mat-list-item>
+      <mat-card routerLink="/awards" class="cnt">
+        <ion-row>
+          <ion-icon name="trophy"></ion-icon>
+          <p>Montepremi</p></ion-row
+        ></mat-card
+      >
+    </mat-list-item>
+    <mat-list-item>
       <mat-card routerLink="/select-teams" class="cnt">
         <ion-row>
           <ion-icon name="git-compare"></ion-icon>
