--- a/src/global.scss
+++ b/src/global.scss
@@ -41,6 +41,10 @@ td.mat-cell:first-of-type {
   padding-left: 0 !important;
 }
 
+.cnt-home .cnt img {
+  height: 3em;
+  margin: 1em;
+}
 
 th.mat-header-cell:last-of-type,
 td.mat-cell:last-of-type {
