--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -39,6 +39,14 @@
       >
     </mat-list-item>
     <mat-list-item>
+      <mat-card routerLink="/easy-tool" class="cnt">
+        <ion-row>
+          <ion-icon name="git-compare"></ion-icon>
+          <p>Scambi Easy</p>
+          <ion-icon name="construct"></ion-icon> </ion-row
+      ></mat-card>
+    </mat-list-item>
+    <mat-list-item>
       <mat-card routerLink="/rule-book" class="cnt">
         <ion-row>
           <ion-icon name="book"></ion-icon>
