--- a/src/app/pages/free/free.page.html
+++ b/src/app/pages/free/free.page.html
@@ -6,7 +6,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-card>
-    <ion-grid>
+    <ion-grid class="filter-cnt">
       <ion-row>
         <ion-col>
           <ion-select
