--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,46 +5,40 @@
 </ion-header>
 
 <ion-content class="cnt-home">
-  <mat-list>
-    <mat-list-item>
-      <mat-card routerLink="/team-list" class="cnt"
-        ><ion-row>
-          <ion-icon name="football"></ion-icon>
-          <p>Rose</p></ion-row
-        ></mat-card
-      >
-    </mat-list-item>
-    <mat-list-item>
-      <mat-card routerLink="/free" class="cnt"
-        ><ion-row>
-          <ion-icon name="finger-print"></ion-icon>
-          <p>Svincolati</p></ion-row
-        ></mat-card
-      >
-    </mat-list-item>
-    <mat-list-item>
-      <mat-card routerLink="/awards" class="cnt">
-        <ion-row>
-          <ion-icon name="trophy"></ion-icon>
-          <p>Montepremi</p></ion-row
-        ></mat-card
-      >
-    </mat-list-item>
-    <mat-list-item>
-      <mat-card routerLink="/select-teams" class="cnt">
-        <ion-row>
-          <ion-icon name="git-compare"></ion-icon>
-          <p>Tool Scambi</p></ion-row
-        ></mat-card
-      >
-    </mat-list-item>
-    <mat-list-item>
-      <mat-card routerLink="/rule-book" class="cnt">
-        <ion-row>
-          <ion-icon name="book"></ion-icon>
-          <p>Regolamento</p></ion-row
-        ></mat-card
-      >
-    </mat-list-item>
-  </mat-list>
+  <div style="padding: 1rem">
+    <mat-card routerLink="/team-list"
+      ><ion-row>
+        <ion-icon name="football"></ion-icon>
+        <p>Rose</p></ion-row
+      ></mat-card
+    >
+
+    <mat-card routerLink="/free"
+      ><ion-row>
+        <ion-icon name="finger-print"></ion-icon>
+        <p>Svincolati</p></ion-row
+      ></mat-card
+    >
+
+    <mat-card routerLink="/awards">
+      <ion-row>
+        <ion-icon name="trophy"></ion-icon>
+        <p>Montepremi</p></ion-row
+      ></mat-card
+    >
+
+    <mat-card routerLink="/select-teams">
+      <ion-row>
+        <ion-icon name="git-compare"></ion-icon>
+        <p>Tool Scambi</p></ion-row
+      ></mat-card
+    >
+
+    <mat-card routerLink="/rule-book">
+      <ion-row>
+        <ion-icon name="book"></ion-icon>
+        <p>Regolamento</p></ion-row
+      ></mat-card
+    >
+  </div>
 </ion-content>
