--- a/src/app/pages/balance/balance.page.scss
+++ b/src/app/pages/balance/balance.page.scss
@@ -1,11 +1,21 @@
 .cnt-balance {
   --background: none;
-  background-color: white;
+  background-color: var(--ion-color-primary);
 
   ion-card {
-    background-color: #424242;
-    color: white;
-
+    background-color: var(--ion-color-primary-contrast);
+    font-weight: bold;
+    .category {
+      text-decoration: underline;
+      color: var(--ion-color-primary);
+    }
+    .label {
+      color: var(--ion-color-primary);
+    }
+    .value {
+      background-color: var(--ion-color-primary);
+      color: white;
+    }
     ion-button {
       margin: 1em auto;
     }
@@ -14,13 +24,13 @@
 
 .separator {
   height: 1px;
-  background-color: white;
+  background-color: var(--ion-color-primary);
   width: 100%;
   margin: auto;
 }
 
 .positiveValue {
-  color: lightgreen;
+  color: forestgreen;
   font-size: 1rem;
   font-weight: bold;
 }
