--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,23 +1,23 @@
 .cnt-home {
   --background: none;
-  background-color: #424242;
-  mat-list-item {
-    margin: 2.5em 0;
-    .cnt {
-      border: 1px solid grey;
-      background-color: white;
-      color: black;
-      width: 100%;
-      padding: 0;
-      ion-icon {
-        width: 2em;
-        height: 2em;
-        margin: 1em;
-      }
-      p {
-        color: #000;
-        margin: auto 0;
-      }
+  background-color: var(--ion-color-primary);
+
+  mat-card {
+    border: 1px solid grey;
+    background-color: white;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 1rem;
+    ion-icon {
+      color: var(--ion-color-primary);
+      width: 2em;
+      height: 2em;
+      margin: 1em;
+    }
+    p {
+      color: rgb(85, 85, 85);
+      font-weight: bold;
+      margin: auto 0;
     }
   }
 }
