--- a/src/app/pages/player/player.page.scss
+++ b/src/app/pages/player/player.page.scss
@@ -3,8 +3,8 @@ img {
 }
 
 ion-card {
-  background-color: #424242;
-  color: white;
+  background-color: var(--ion-color-primary);
+  color: var(--ion-color-primary-contrast);
 }
 
 .goalKeeperBackG {
