--- a/src/app/pages/rule-book/components/awards/awards.component.scss
+++ b/src/app/pages/rule-book/components/awards/awards.component.scss
@@ -4,20 +4,21 @@ ion-grid {
   border-style: hidden;
 
   ion-col:first-child {
-    border: 1px solid black;
+    border: 1px solid var(--ion-color-primary);
+    border-top-color: var(--ion-color-primary-contrast);
     border-bottom: 0;
     border-right: 0;
     background-color: var(--ion-color-primary);
     font-weight: bold;
-    color: white;
+    color: var(--ion-color-primary-contrast);
   }
   ion-col:last-child {
-    border-right: 1px solid black;
-    border-top: 1px solid black;
+    border-right: 1px solid var(--ion-color-primary);
+    border-top: 1px solid var(--ion-color-primary);
   }
 
   ion-row:last-child {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid var(--ion-color-primary);
   }
 }
 
