--- a/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
+++ b/src/app/pages/tool-ex/tool-exchange/tool-exchange.page.html
@@ -13,23 +13,20 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <ion-card class="container">
+  <ion-card>
     <mat-tab-group mat-stretch-tabs>
       <mat-tab label="{{firstTeamName | cutLongName}}">
-        <!--
-        <div *ngIf="firstTeam.length != 0" style="margin-top: 20px">
-          <b>Valori Iniziali</b>
-        </div>-->
-        <mat-form-field style="margin-top: 1rem" appearance="fill">
-          <mat-label>Conguaglio</mat-label>
-          <input (change)="setFirstExtra()" [(ngModel)]="extra1" matInput />
-        </mat-form-field>
-        <ion-row>
-          <ion-button routerLink="team/{{firstTeamId}}/1"
-            >Aggiungi giocatore</ion-button
-          >
-        </ion-row>
-
+        <ion-card class="container">
+          <mat-form-field style="margin-top: 1rem" appearance="fill">
+            <mat-label>Conguaglio</mat-label>
+            <input (change)="setFirstExtra()" [(ngModel)]="extra1" matInput />
+          </mat-form-field>
+          <ion-row>
+            <ion-button routerLink="team/{{firstTeamId}}/1"
+              >Aggiungi giocatore</ion-button
+            >
+          </ion-row>
+        </ion-card>
         <table
           #firstTeamTable
           mat-table
@@ -96,8 +93,8 @@
         </table>
 
         <!--   <div *ngIf="firstTeam.length != 0" style="margin-top: 1em">
-          <b>Valori Finali</b>
-        </div>-->
+        <b>Valori Finali</b>
+      </div>-->
         <ion-icon
           *ngIf="firstTeam.length !==0"
           class="big-icon"
@@ -140,7 +137,7 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
               <ion-icon
-                style="font-size: 2rem; color: lightgreen"
+                style="font-size: 2rem; color: forestgreen"
                 *ngIf="element.value !== element.finalValue"
                 name="caret-up-outline"
               ></ion-icon>
@@ -157,20 +154,17 @@
         </table>
       </mat-tab>
       <mat-tab label="{{secondTeamName | cutLongName}}">
-        <!--
-        <div *ngIf="secondTeam.length != 0" style="margin-top: 20px">
-          <b>Valori Iniziali</b>
-        </div>-->
-        <mat-form-field style="margin-top: 1rem" appearance="fill">
-          <mat-label>Conguaglio</mat-label>
-          <input (change)="setSecondExtra()" [(ngModel)]="extra2" matInput />
-        </mat-form-field>
-        <ion-row>
-          <ion-button routerLink="team/{{secondTeamId}}/2"
-            >Aggiungi giocatore</ion-button
-          >
-        </ion-row>
-
+        <ion-card class="container">
+          <mat-form-field style="margin-top: 1rem" appearance="fill">
+            <mat-label>Conguaglio</mat-label>
+            <input (change)="setSecondExtra()" [(ngModel)]="extra2" matInput />
+          </mat-form-field>
+          <ion-row>
+            <ion-button routerLink="team/{{secondTeamId}}/2"
+              >Aggiungi giocatore</ion-button
+            >
+          </ion-row>
+        </ion-card>
         <table
           [ngClass]="{'tableHidden': secondTeam.length == 0}"
           #secondTeamTable
@@ -280,7 +274,7 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
               <ion-icon
-                style="font-size: 2rem; color: lightgreen"
+                style="font-size: 2rem; color: forestgreen"
                 *ngIf="element.value !== element.finalValue"
                 name="caret-up-outline"
               ></ion-icon>
