--- a/src/global.scss
+++ b/src/global.scss
@@ -65,23 +65,69 @@ td.mat-cell:last-of-type {
 
 // CHANGE COLOR OF MAT FIELDS FORM
 
-.mat-focused .mat-form-field-label {
+.mat-form-field-label {
   /*change color of label*/
-  color: white !important;
+  color: var(--ion-color-primary-contrast) !important;
 }
 .mat-form-field-underline {
   /*change color of underline*/
-  background-color: white !important;
+  background-color: var(--ion-color-primary-contrast) !important;
 }
 .mat-form-field-ripple {
   /*change color of underline when focused*/
-  background-color: white !important;
+  background-color: var(--ion-color-primary-contrast) !important;
 }
 .mat-selected .mat-option-text {
-  color: white !important;
+  color: var(--ion-color-primary-contrast) !important;
 }
 
 // padding in tab tool exchange
 .container .mat-tab-label {
   padding: 0 6px !important;
+}
+
+.mat-table {
+  background-color: var(--ion-color-primary);
+  color: var(--ion-color-primary-contrast);
+
+  .mat-row {
+    font-weight: bold;
+    border-bottom-color: rgba(255, 255, 255, 0.12);
+  }
+  .mat-cell {
+    color: inherit;
+    border-color: inherit;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+  }
+}
+
+ion-content {
+  --background: none;
+  background-color: var(--ion-color-primary);
+}
+
+#main-content h3,
+#main-content h5 {
+  color: var(--ion-color-primary);
+}
+
+ion-card {
+  background-color: var(--ion-color-primary-contrast);
+  color: var(--ion-color-primary);
+}
+
+mat-tab-group {
+  &.mat-primary .mat-ink-bar {
+    background-color: var(--ion-color-primary-contrast) !important;
+  }
+  .mat-tab-label-container {
+    background-color: var(--ion-color-primary);
+  }
+  .mat-tab-label {
+    color: var(--ion-color-primary-contrast);
+  }
+  mat-tab-body {
+    color: var(--ion-color-primary-contrast);
+  }
 }
