--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -6,12 +6,12 @@
   --ion-font-family: "Open Sans", Arial, Helvetica, Verdana, sans-serif;
   --ion-default-font: "Open Sans", Arial, Helvetica, Verdana, sans-serif !important;
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary: #1853C9;
+  --ion-color-primary-rgb: 24, 83, 201;
+  --ion-color-primary-contrast: #f7f7f7;
+  --ion-color-primary-contrast-rgb: 247, 247, 247;
+  --ion-color-primary-shade: #1853C9;
+  --ion-color-primary-tint: #1853C9;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
