--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,8 +9,8 @@
     <mat-card routerLink="/team-list"
       ><ion-row>
         <ion-icon name="football"></ion-icon>
-        <p>Rose</p></ion-row
-      ></mat-card
+        <p>Rose</p>
+      </ion-row></mat-card
     >
 
     <mat-card routerLink="/free"
@@ -22,7 +22,7 @@
 
     <mat-card routerLink="/awards">
       <ion-row>
-        <ion-icon name="trophy"></ion-icon>
+        <ion-icon style="color: gold" name="trophy"></ion-icon>
         <p>Montepremi</p></ion-row
       ></mat-card
     >
