--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,6 +8,8 @@
     width: 100%;
     padding: 0;
     margin-bottom: 1rem;
+    border-radius: 30px;
+    padding-right: 3em;
     ion-icon {
       color: var(--ion-color-primary);
       width: 2em;
@@ -17,7 +19,7 @@
     p {
       color: rgb(85, 85, 85);
       font-weight: bold;
-      margin: auto 0;
+      margin: auto;
     }
   }
 }
