--- a/src/app/pages/team-list/team-list.page.scss
+++ b/src/app/pages/team-list/team-list.page.scss
@@ -7,6 +7,11 @@
     width: 100%;
     padding: 0;
     margin-bottom: 1rem;
+    border-radius: 50px;
+    padding-right: 4em;
+    div {
+      display: flex;
+    }
     img {
       height: 3em;
       margin: 1em;
@@ -14,7 +19,8 @@
     p {
       color: rgb(85, 85, 85);
       font-weight: bold;
-      margin: auto 0;
+      margin: auto;
+      text-align: center;
     }
   }
 }
