--- a/src/global.scss
+++ b/src/global.scss
@@ -131,3 +131,6 @@ mat-tab-group {
     color: var(--ion-color-primary-contrast);
   }
 }
+.mat-select-panel {
+  background-color: var(--ion-color-primary);
+}
