--- a/src/app/pages/easy-tool-ex/pages/easy-player/easy-player.page.scss
+++ b/src/app/pages/easy-tool-ex/pages/easy-player/easy-player.page.scss
@@ -1,13 +1,22 @@
-ion-card {
-  background-color: #424242;
-  color: white;
-  padding: 1em 0;
-  min-height: 100%;
-  min-height: -moz-available; /* WebKit-based browsers will ignore this. */
-  min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  min-height: fill-available;
+ion-content {
+  --background: none;
+  background-color: var(--ion-color-primary-contrast);
+  ion-card {
+    color: var(--ion-color-primary-contrast);
+    background-color: var(--ion-color-primary);
+    padding: 1em 0;
+    margin: 0;
+    min-height: 100%;
+    min-height: -moz-available; /* WebKit-based browsers will ignore this. */
+    min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+    min-height: fill-available;
+  }
 }
 
 ion-button {
   margin: 1em auto;
+  --background: var(--ion-color-primary-contrast);
+  --background-focused: var(--ion-color-primary-contrast);
+  --color: var(--ion-color-primary);
+  --color-activated: var(--ion-color-primary);
 }
