--- a/src/app/pages/easy-tool-ex/pages/easy-summary/components/team-summary/team-summary.component.html
+++ b/src/app/pages/easy-tool-ex/pages/easy-summary/components/team-summary/team-summary.component.html
@@ -41,22 +41,30 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="finalValue">
+    <th mat-header-cell *matHeaderCellDef>Val. F.</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.finalValue | roundPipe | currency: "EUR" }}
+    </td>
+  </ng-container>
+
+  <!--
   <ng-container matColumnDef="contract">
     <th mat-header-cell *matHeaderCellDef>Contr.</th>
     <td mat-cell *matCellDef="let element">
       {{ element.contractType | contractTypeMap }}
     </td>
   </ng-container>
-
+-->
   <ng-container matColumnDef="length">
-    <th mat-header-cell *matHeaderCellDef>Durata</th>
+    <th mat-header-cell *matHeaderCellDef>Mesi</th>
     <td mat-cell *matCellDef="let element">
       {{ element.contractLength }}
     </td>
   </ng-container>
 
   <ng-container matColumnDef="bonus">
-    <th mat-header-cell *matHeaderCellDef>Bonus</th>
+    <th mat-header-cell *matHeaderCellDef>B</th>
     <td mat-cell *matCellDef="let element">
       {{ element.bonusList | bonusCompute }}
     </td>
@@ -72,6 +80,7 @@
   <tr mat-header-row *matHeaderRowDef="teamCols"></tr>
   <tr mat-row *matRowDef="let row; columns: teamCols"></tr>
 </table>
+<!--
 <ion-icon
   *ngIf="team.length !== 0"
   class="big-icon"
@@ -128,4 +137,4 @@
 
   <tr mat-header-row *matHeaderRowDef="finalTeamCols"></tr>
   <tr mat-row *matRowDef="let row; columns: finalTeamCols"></tr>
-</table>
+</table>-->
