--- a/src/app/pages/easy-tool-ex/pages/easy-summary/easy-summary.page.scss
+++ b/src/app/pages/easy-tool-ex/pages/easy-summary/easy-summary.page.scss
@@ -1,9 +1,55 @@
-.container {
-  text-align: center;
-  background-color: #424242;
-  color: white;
-  min-height: 100%;
-  min-height: -moz-available; /* WebKit-based browsers will ignore this. */
-  min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
-  min-height: fill-available;
+ion-content {
+  --background: none;
+  background-color: var(--ion-color-primary-contrast);
+  ion-card {
+    margin: 0;
+    min-height: 100%;
+    min-height: -moz-available; /* WebKit-based browsers will ignore this. */
+    min-height: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+    min-height: fill-available;
+    text-align: center;
+    &.container {
+      margin: 0 0 1rem;
+      color: var(--ion-color-primary-contrast);
+      background-color: var(--ion-color-primary);
+    }
+  }
+
+  .mat-table {
+    .role {
+      color: #fff;
+      border-radius: 50%;
+      padding: 5px 9px;
+    }
+  }
+  strong {
+    font-size: 20px;
+    line-height: 26px;
+    margin-right: 20px;
+  }
+  ion-button {
+    margin: 0 auto 1em auto;
+    --background: var(--ion-color-primary-contrast);
+    --background-focused: var(--ion-color-primary-contrast);
+    --color: var(--ion-color-primary);
+    --color-activated: var(--ion-color-primary);
+  }
+  .big-icon {
+    height: 3rem;
+    width: 3rem;
+    color: var(--ion-color-primary);
+  }
+}
+
+table {
+  width: 100%;
+  margin: 1em 0;
+}
+
+.tableHidden {
+  width: 0%;
+}
+
+.finalTitle {
+  margin-top: 50px;
 }
