--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
   <div style="padding: 1rem">
     <mat-card routerLink="/team-list"
       ><ion-row>
-        <ion-icon name="football"></ion-icon>
+        <ion-icon style="color: black"  name="football"></ion-icon>
         <p>Rose</p>
       </ion-row></mat-card
     >
@@ -29,14 +29,14 @@
 
     <mat-card routerLink="/select-teams">
       <ion-row>
-        <ion-icon name="git-compare"></ion-icon>
+        <ion-icon style="color: lightseagreen" name="git-compare"></ion-icon>
         <p>Tool Scambi</p></ion-row
       ></mat-card
     >
 
     <mat-card routerLink="/rule-book">
       <ion-row>
-        <ion-icon name="book"></ion-icon>
+        <ion-icon style="color: grey" name="book"></ion-icon>
         <p>Regolamento</p></ion-row
       ></mat-card
     >
