--- a/src/app/pages/awards/awards.page.scss
+++ b/src/app/pages/awards/awards.page.scss
@@ -1,7 +1,7 @@
 .cnt-balance {
   --background: none;
-  background-color: var(--ion-color-primary);
-
+ background-image:url('/assets/img/sea.jpeg');
+  background-repeat: repeat;
   ion-card {
     background-color: var(--ion-color-primary-contrast);
     color: var(--ion-color-primary);
