--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,6 +1,7 @@
 .cnt-home {
   --background: none;
-  background-color: var(--ion-color-primary);
+  background-image:url('/assets/img/sea.jpeg');
+  background-repeat: repeat;
 
   mat-card {
     border: 1px solid grey;
