--- a/src/app/pages/team-list/team-list.page.scss
+++ b/src/app/pages/team-list/team-list.page.scss
@@ -1,7 +1,7 @@
 .cnt-home {
   --background: none;
-  background-color: var(--ion-color-primary);
-  .cnt {
+ background-image:url('/assets/img/sea.jpeg');
+  background-repeat: repeat;  .cnt {
     border: 1px solid grey;
     background-color: white;
     width: 100%;
