--- a/src/global.scss
+++ b/src/global.scss
@@ -104,8 +104,8 @@ td.mat-cell:last-of-type {
 
 ion-content {
   --background: none;
-  background-color: var(--ion-color-primary);
-}
+ background-image:url('/assets/img/sea.jpeg');
+  background-repeat: repeat;}
 
 #main-content h3,
 #main-content h5 {
