--- a/src/app/pages/awards/awards.page.scss
+++ b/src/app/pages/awards/awards.page.scss
@@ -1,6 +1,6 @@
 .cnt-balance {
   --background: none;
- background-image:url('/assets/img/sea.jpeg');
+ background-image:url('/app-rose/assets/img/sea.jpeg');
   background-repeat: repeat;
   ion-card {
     background-color: var(--ion-color-primary-contrast);
