--- a/src/app/pages/team-list/team-list.page.scss
+++ b/src/app/pages/team-list/team-list.page.scss
@@ -1,6 +1,6 @@
 .cnt-home {
   --background: none;
- background-image:url('/assets/img/sea.jpeg');
+ background-image:url('/app-rose/assets/img/sea.jpeg');
   background-repeat: repeat;  .cnt {
     border: 1px solid grey;
     background-color: white;
