--- a/src/global.scss
+++ b/src/global.scss
@@ -104,7 +104,7 @@ td.mat-cell:last-of-type {
 
 ion-content {
   --background: none;
- background-image:url('/assets/img/sea.jpeg');
+ background-image:url('/app-rose/assets/img/sea.jpeg');
   background-repeat: repeat;}
 
 #main-content h3,
