--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,6 +1,6 @@
 .cnt-home {
   --background: none;
-  background-image:url('/assets/img/sea.jpeg');
+  background-image:url('/app-rose/assets/img/sea.jpeg');
   background-repeat: repeat;
 
   mat-card {
