update new season

--- a/src/app/pages/balance/balance.page.html
+++ b/src/app/pages/balance/balance.page.html
@@ -68,7 +68,7 @@
           >{{seasonBalance?.annualBalance | currency:'EUR'}}</ion-col
         >
       </ion-row>
-      <ion-row *ngIf="false">
+      <ion-row>
         <ion-button (click)="navigateToRenewal()">Calcola rinnovi</ion-button>
       </ion-row>
     </ion-grid>
